--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@
     height: 60px;
     width: 100%;
     background-color: white;
-    padding-top: 20px;
+    
 
 }
 .logo{
     vertical-align: bottom;
 
 }
-
 .logo_text{
     font-size: 40px;
+}
+body{
+    background: lightgrey;
+    margin: 0px;
 }
