--- a/style.css
+++ b/style.css
@@ -2,17 +2,31 @@
     height: 60px;
     width: 100%;
     background-color: white;
+    padding-top: 3px;
     
 
 }
 .logo{
-    vertical-align: bottom;
-
+    vertical-align: middle;
 }
+
+
 .logo_text{
     font-size: 40px;
+    vertical-align: middle;
+    
 }
 body{
-    background: lightgrey;
+    background: rgb(241, 241, 241);
     margin: 0px;
+}
+.conteiner1{
+    width: 60%;
+    margin: auto;
+    margin-top: 20px;
+    background-color: white;
+
+}
+.conteiner2{
+    
 }
