--- a/style.css
+++ b/style.css
@@ -23,10 +23,34 @@ body{
 .conteiner1{
     width: 60%;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 30px;
+    background-color: white;
+    padding: 10px;
+
+}
+
+.button{
+    padding: 5px 9px;
+}
+
+#button1{
+    border: none;
+    border-radius: 5px;
+    background-color: deepskyblue;
+    color: white;
+}
+#button2{
+    color: rgb(156, 156, 156);
+    border: 1px solid  rgb(156,156,156) ;
+    border-radius: 5px;
     background-color: white;
 
 }
 .conteiner2{
+    width: 60%;
+    margin: auto;
+    margin-top: 3px;
+    background-color: white;
     
+
 }
