--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@
 .logo{
     vertical-align: middle;
 }
-
-
 .logo_text{
+    display:inline-block;
     font-size: 40px;
     vertical-align: middle;
     
@@ -20,6 +19,7 @@ body{
     background: rgb(241, 241, 241);
     margin: 0px;
 }
+
 .conteiner1{
     width: 60%;
     margin: auto;
@@ -30,7 +30,9 @@ body{
 }
 
 .button{
-    padding: 5px 9px;
+    
+    font-size: 10px;
+    padding: 8px 9px;
 }
 
 #button1{
