--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .conteiner_logo{
-    height: 60px;
     width: 100%;
     background-color: white;
     padding-top: 3px;
@@ -51,9 +50,21 @@ body{
 }
 .conteiner2{
     width: 60%;
-    margin: auto;
+    margin: 0 auto;
     margin-top: 3px;
     background-color: white;
+    padding:10px;
     
 
+}
+.speciale{
+    display: inline-block;
+    font-size: 10px;
+    color: white;
+}
+
+#editorial{
+    background-color: dodgerblue;
+    border-radius: 10px;
+    padding: 5px 10px;
 }
