--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
     margin-top: 30px;
     background-color: white;
     padding: 10px;
+    
 
 }
 
@@ -59,12 +60,24 @@ body{
 }
 .speciale{
     display: inline-block;
+    border-radius: 10px;
+    padding: 5px 10px;
     font-size: 10px;
     color: white;
 }
 
 #editorial{
     background-color: dodgerblue;
-    border-radius: 10px;
-    padding: 5px 10px;
+
+}
+#q1_goals{
+    background-color: orchid;
+}
+#recruiting{
+    background-color:mediumaquamarine;
+
+}
+
+.row{
+    margin-bottom: 5px;
 }
