--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 }
 
 #button1{
-    border: none;
+    border:1px solid deepskyblue ;
     border-radius: 5px;
     background-color: deepskyblue;
     color: white;
